--- a/dbConnectionApp/static/css/home.css
+++ b/dbConnectionApp/static/css/home.css
@@ -18,6 +18,30 @@ img {
     user-select: none;
 }
 
+@keyframes error_message {
+    0% {margin-top: -15vh;}
+    50% {margin-top: -5vh;}
+    100% {margin-top: 5vh;}
+}
+
+#error {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50%;
+    margin-top: 5vh;
+    width: 20vw;
+    height: 4vh;
+    animation-name: error_message;
+    animation-duration: 0.3s;
+    border-radius: 10px;
+    transform: translateX(-50%);
+    background-color: rgba(255, 0, 0, 0.705);
+    color: var(--white-primary);
+}
+
 .brand-navbar {
     width: 100%;
     height: 10vh;
