--- a/dbConnectionApp/templates/home.html
+++ b/dbConnectionApp/templates/home.html
@@ -93,7 +93,7 @@
                                     </div>
                                     <div class="filter-dropdown-element">
                                         <h2>Date</h2>
-                                        <select>
+                                        <select id="filter-by-date">
                                             <option>Default</option>
                                             <option>New first</option>
                                             <option>Old first</option>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="labels">
                             <h4 class="label-name">Name</h4>
-                            <h4 class="label-date">Info</h4>
+                            <h4 class="label-info">Info</h4>
                             <h4 class="label-type">Type</h4>
                         </div>
                     </div>
